--- a/Example/MainWindow.xaml
+++ b/Example/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="222,130,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
